v0.1.2 - 10-17-2013

* Copy over the web directory and the sub content

v0.1.1 - 10-17-2013

* Adding changelog.txt
* updating Readme.md to include npm installation

v0.1.0 - 10-17-2013

* First release