@@ -1,3 +1,3 @@
 {
-	"directory": "app/src/libs"
+	"directory": "app/src/bower_components"
 }
