@@ -1,6 +1,8 @@
 v0.1.2 - 10-17-2013
 
 * Copy over the web directory and the sub content
+* Moving bower dependencies to src/bower_components
+* Adding build to copy over entire src/libs directory
 
 v0.1.1 - 10-17-2013
 
